# Computional_Geometry

./: CMakeLists.txt  README.md  circle.cpp  circle.h  line.cpp  line.h  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  triangle.cpp  triangle.h  vec.cpp  vec.h
src/computational_geometry/: CMakeLists.txt  circle.cpp  circle.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h  triangle.cpp  triangle.h  vec.cpp  vec.h
